--- a/Plataforma footbal/index.html
+++ b/Plataforma footbal/index.html
@@ -164,7 +164,7 @@
             <p class="text-center white">En esta seccion podras encontrar los cursos disponibles</p>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card text-center">
                         <img src="./img/page-3_img5.jpg" class="card-img-top" alt="Imagen 1">
                         <div class="card-body"> <br>
                             <h5 class="card-title text-center">Curso de Arquero</h5>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card text-center">
                         <img src="./img/page-3_img9.jpg" class="card-img-top" alt="Imagen 2">
                         <div class="card-body"> <br>
                             <h5 class="card-title text-center">Curso de Defensa</h5>
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card text-center">
                         <img src="./img/page-3_img7.jpg" class="card-img-top" alt="Imagen 3">
                         <div class="card-body"> <br>
                             <h5 class="card-title text-center">Curso de Delantero</h5>
