--- a/Plataforma footbal/index.html
+++ b/Plataforma footbal/index.html
@@ -75,7 +75,7 @@
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="./img/img1.jpg" alt="Primera imagen">
                     <div class="carousel-caption">
-                        <h1>¡Bienvenido a nuestra plataforma de cursos de fútbol!</h1>
+                        <h1>¡Bienvenido a nuestra plataforma de cursos de fútbol!!</h1>
                         <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o
                             delantero.</p>
                     </div>
