--- a/Plataforma footbal/index.html
+++ b/Plataforma footbal/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Fútbol</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/principal.css">
     <link rel="stylesheet" href="./css/mailform.css">
@@ -16,17 +15,14 @@
     <header>
         <div class="top-panel bg1">
             <div class="container">
-
                 <ul class="inline-list">
-                    <li><a href="#" class="fa fa-facebook-square">facebook</a></li>
-                    <li><a href="#" class="fa  fa-google-plus-square">google-plus</a></li>
-                    <li><a href="#" class="fa fa-twitter">twitter</a></li>
-                    <li><a href="#" class="fa fa-pinterest">pinterest</a></li>
-                    <li><a href="#" class="fa  fa-instagram">instagram</a></li>
+                    <li><a href="#" class="fa fa-facebook-square">Facebook</a></li>
+                    <li><a href="#" class="fa fa-google-plus-square">Google-plus</a></li>
+                    <li><a href="#" class="fa fa-twitter">Twitter</a></li>
+                    <li><a href="#" class="fa fa-pinterest">Pinterest</a></li>
+                    <li><a href="#" class="fa fa-instagram">Instagram</a></li>
                 </ul>
-
                 <a class="phone" href="callto:#">+593 559 6580</a>
-
             </div>
         </div>
         <div class="desplaza">
@@ -37,28 +33,16 @@
                             <h1 class="navbar-brand">
                                 <a data-type='rd-navbar-brand' href="index.html">
                                     Futboll <br>
-                                    <span>
-                                        Cursos<br>
-                                        Profesionales
-                                    </span>
+                                    <span>Cursos<br>Profesionales</span>
                                 </a>
                             </h1>
                         </div>
-
                         <div class="navbar-right">
                             <ul class="navbar-nav sf-menu" data-type="navbar">
-                                <li class="active">
-                                    <a href="#">Inicio</a>
-                                </li>
-                                <li>
-                                    <a href="#cursos">Cursos</a>
-                                </li>
-                                <li>
-                                    <a href="#informacion">Información</a>
-                                </li>
-                                <li>
-                                    <a href="#contacto">Contacto</a>
-                                </li>
+                                <li class="active"><a href="#">Inicio</a></li>
+                                <li><a href="#cursos">Cursos</a></li>
+                                <li><a href="#informacion">Información</a></li>
+                                <li><a href="#contacto">Contacto</a></li> 
                             </ul>
                         </div>
                     </div>
@@ -76,24 +60,21 @@
                     <img class="d-block w-100" src="./img/img1.jpg" alt="Primera imagen">
                     <div class="carousel-caption">
                         <h1>¡Bienvenido a nuestra plataforma de cursos de fútbol!!</h1>
-                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o
-                            delantero.</p>
+                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o delantero.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="./img/img2.jpg" alt="Segunda imagen">
                     <div class="carousel-caption">
                         <h1>¡Bienvenido a nuestra plataforma de cursos de fútbol!</h1>
-                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o
-                            delantero.</p>
+                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o delantero.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="./img/img3.jpg" alt="Tercera imagen">
                     <div class="carousel-caption">
                         <h1>¡Bienvenido a nuestra plataforma de cursos de fútbol!</h1>
-                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o
-                            delantero.</p>
+                        <p>Encuentra cursos para mejorar tus habilidades como arquero, defensa, mediocampista o delantero.</p>
                     </div>
                 </div>
             </div>
@@ -111,21 +92,16 @@
     <!--Bienvenida-->
     <section class="well well1 white-background">
         <div class="container">
-            <h3>
-                Bienvenidos
-            </h3>
+            <h3>Bienvenidos</h3>
             <div class="row offs1">
                 <div class="col-md-4 col-sm-12 col-xs-12">
                     <p class="insR">
-                        ¡Bienvenidos a nuestra plataforma de cursos de fútbol! Aquí, tu pasión por el fútbol se
-                        transformará
+                        ¡Bienvenidos a nuestra plataforma de cursos de fútbol! Aquí, tu pasión por el fútbol se transformará
                         en habilidades y conocimientos sólidos. Ofrecemos una amplia gama de cursos diseñados para todos
-                        los
-                        niveles, desde principiantes hasta avanzados, impartidos por expertos en la materia.
+                        los niveles, desde principiantes hasta avanzados, impartidos por expertos en la materia.
                         <br><br>
                         Ya sea que busques mejorar tu técnica, aprender estrategias de juego o convertirte en un
-                        entrenador
-                        certificado, tenemos el curso perfecto para ti. Únete a nuestra comunidad de futbolistas y
+                        entrenador certificado, tenemos el curso perfecto para ti. Únete a nuestra comunidad de futbolistas y
                         entrenadores comprometidos con el desarrollo y el éxito en el campo.
                     </p>
                 </div>
@@ -133,12 +109,10 @@
                     <p class="insR">
                         Nuestro enfoque se basa en la combinación de teoría y práctica, garantizando una experiencia de
                         aprendizaje integral. Cada curso está estructurado para proporcionarte las herramientas
-                        necesarias
-                        para alcanzar tus objetivos personales y profesionales en el mundo del fútbol.
+                        necesarias para alcanzar tus objetivos personales y profesionales en el mundo del fútbol.
                         <br><br>
                         Además, ofrecemos recursos adicionales como webinars, talleres y foros de discusión para
-                        enriquecer
-                        tu experiencia y mantenerte siempre actualizado con las últimas tendencias y técnicas del fútbol
+                        enriquecer tu experiencia y mantenerte siempre actualizado con las últimas tendencias y técnicas del fútbol
                         moderno.
                     </p>
                 </div>
@@ -146,10 +120,8 @@
                     <p class="insR">
                         No esperes más para dar el próximo paso en tu carrera futbolística. Explora nuestros cursos,
                         inscríbete y comienza a mejorar tu juego desde hoy. Estamos aquí para apoyarte en cada etapa de
-                        tu
-                        desarrollo, brindándote la mejor formación y las mejores oportunidades de crecimiento en el
-                        mundo
-                        del fútbol.
+                        tu desarrollo, brindándote la mejor formación y las mejores oportunidades de crecimiento en el
+                        mundo del fútbol.
                     </p>
                 </div>
             </div>
@@ -180,8 +152,7 @@
                         <img src="./img/page-3_img9.jpg" class="card-img-top" alt="Imagen 2">
                         <div class="card-body"> <br>
                             <h5 class="card-title text-center">Curso de Defensa</h5>
-                            <p class="card-text white">Mejora tu técnica defensiva y conviértete en un defensor sólido y
-                                confiable.</p>
+                            <p class="card-text white">Mejora tu técnica defensiva y conviértete en un defensor sólido y confiable.</p>
                             <a href="#cursos" class="btn btn-primary btn-block">Más información</a> <br>
                         </div>
                     </div>
@@ -191,9 +162,7 @@
                         <img src="./img/page-3_img7.jpg" class="card-img-top" alt="Imagen 3">
                         <div class="card-body"> <br>
                             <h5 class="card-title text-center">Curso de Delantero</h5>
-                            <p class="card-text white">Aprende a definir y a marcar goles con las técnicas de los
-                                mejores
-                                delanteros.</p>
+                            <p class="card-text white">Aprende a definir y a marcar goles con las técnicas de los mejores delanteros.</p>
                             <a href="#cursos" class="btn btn-primary btn-block">Más información</a>
                         </div>
                     </div>
@@ -213,15 +182,13 @@
                     <h3>Curso de Arquero</h3>
                     <p>El curso de arquero está diseñado para enseñarte las técnicas y habilidades necesarias para
                         convertirte en un arquero de élite. Aprenderás a detener tiros, a cortar centros y a dirigir a
-                        tu
-                        defensa desde la portería. Nuestros entrenadores expertos te guiarán a través de ejercicios
+                        tu defensa desde la portería. Nuestros entrenadores expertos te guiarán a través de ejercicios
                         prácticos y te brindarán consejos útiles para mejorar tu rendimiento.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Curso de Defensa</h3>
                     <p>El curso de defensa te ayudará a mejorar tu técnica defensiva y a convertirte en un defensor
-                        sólido
-                        y confiable. Aprenderás a marcar a los delanteros rivales, a interceptar pases y a despejar el
+                        sólido y confiable. Aprenderás a marcar a los delanteros rivales, a interceptar pases y a despejar el
                         balón con precisión. Nuestros entrenadores te enseñarán las mejores tácticas y estrategias para
                         mantener tu portería a salvo.</p>
                 </div>
@@ -229,8 +196,7 @@
                     <h3>Curso de Delantero</h3>
                     <p>El curso de delantero te enseñará a definir y a marcar goles con las técnicas de los mejores
                         delanteros. Aprenderás a desmarcarte, a regatear a los defensores y a rematar con precisión.
-                        Nuestros
-                        entrenadores te ayudarán a mejorar tu velocidad, tu agilidad y tu capacidad de finalización para
+                        Nuestros entrenadores te ayudarán a mejorar tu velocidad, tu agilidad y tu capacidad de finalización para
                         que puedas convertirte en un goleador letal.</p>
                 </div>
             </div>
@@ -242,14 +208,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-xs-12">
-                    <h3>
-                        Dirección y teléfonos
-                    </h3>
+                    <h3>Dirección y teléfonos</h3>
                     <div class="addr1">
                         <h4 class="titulo4">Dirección</h4>
-                        <p>
-                            1234 - 5678 Calle Inventada Quito, MG123 45HT
-                        </p>
+                        <p>1234 - 5678 Calle Inventada Quito, MG123 45HT</p>
                     </div>
                     <div class="addr1">
                         <h4 class="titulo4">Teléfonos:</h4>
@@ -259,9 +221,7 @@
                 </div>
 
                 <div class="col-md-8 col-xs-12">
-                    <h3>
-                        Formulario de Contacto
-                    </h3>
+                    <h3>Formulario de Contacto</h3>
 
                     <form class='mailform' id="form">
                         <input type="hidden" name="form-type" value="contact">
@@ -270,22 +230,18 @@
                                 <input type="text" name="name" placeholder="* Nombre completo: "
                                     data-constraints="@LettersOnly @NotEmpty" required>
                             </label>
-
                             <label>
                                 <input type="text" name="email" placeholder="* Correo electrónico:"
                                     data-constraints="@Email @NotEmpty" required>
                             </label>
-
                             <label>
                                 <input type="text" name="phone" placeholder="* Teléfono:" data-constraints="@Phone"
                                     required>
                             </label>
-
                             <label class="textarea">
                                 <textarea name="message" placeholder="* Comentarios y preguntas:"
                                     data-constraints="@NotEmpty" required></textarea>
                             </label>
-
                             <div class="mfControls">
                                 <input class="btn btn-primary" id="button" type="submit" value="Enviar">
                             </div>
@@ -293,7 +249,6 @@
                     </form>
                     <script type="text/javascript"
                         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
                     <script type="text/javascript">
                         emailjs.init('zI6Q7OjCdglm-U2A0')
                     </script>
@@ -322,7 +277,6 @@
             </span>
         </h2>
     </div>
-
     <!-- Footer -->
     <footer class="parallax wow fadeIn" data-mobile="true">
         <section>
@@ -336,8 +290,7 @@
                     </div>
                     <div class="col-sm-3 col-xs-12">
                         <address>
-                            <p>
-                                1234 - 5678 Calle Inventada, <br>
+                            <p>1234 - 5678 Calle Inventada, <br>
                                 Quito, MG123 45HT
                             </p>
                             <dl>
@@ -351,10 +304,7 @@
                             <h1 class="navbar-brand">
                                 <a data-type='rd-navbar-brand' href="#" class="white">
                                     Futboll <br>
-                                    <span>
-                                        Cursos<br>
-                                        Profesionales
-                                    </span>
+                                    <span>Cursos<br>Profesionales</span>
                                 </a>
                             </h1>
                         </div>
@@ -364,8 +314,6 @@
         </section>
     </footer>
     </div>
-
-
     <!-- Scripts -->
     <script src="./js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -373,5 +321,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-
 </html>
